; ModuleID = '/home/carl/AnghaBench/lede/package/kernel/hwmon-gsc/src/extr_gsc.c_gsp_remove.c'
source_filename = "/home/carl/AnghaBench/lede/package/kernel/hwmon-gsc/src/extr_gsc.c_gsp_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_client = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.gsp_data = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i2c_client*)* @gsp_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gsp_remove(%struct.i2c_client* %0) #0 {
  %2 = alloca %struct.i2c_client*, align 8
  %3 = alloca %struct.gsp_data*, align 8
  store %struct.i2c_client* %0, %struct.i2c_client** %2, align 8
  %4 = load %struct.i2c_client*, %struct.i2c_client** %2, align 8
  %5 = call %struct.gsp_data* @i2c_get_clientdata(%struct.i2c_client* %4)
  store %struct.gsp_data* %5, %struct.gsp_data** %3, align 8
  %6 = load %struct.gsp_data*, %struct.gsp_data** %3, align 8
  %7 = getelementptr inbounds %struct.gsp_data, %struct.gsp_data* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @hwmon_device_unregister(i32 %8)
  %10 = load %struct.i2c_client*, %struct.i2c_client** %2, align 8
  %11 = getelementptr inbounds %struct.i2c_client, %struct.i2c_client* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load %struct.gsp_data*, %struct.gsp_data** %3, align 8
  %14 = getelementptr inbounds %struct.gsp_data, %struct.gsp_data* %13, i32 0, i32 0
  %15 = call i32 @sysfs_remove_group(i32* %12, i32* %14)
  %16 = load %struct.gsp_data*, %struct.gsp_data** %3, align 8
  %17 = call i32 @kfree(%struct.gsp_data* %16)
  ret i32 0
}

declare dso_local %struct.gsp_data* @i2c_get_clientdata(%struct.i2c_client*) #1

declare dso_local i32 @hwmon_device_unregister(i32) #1

declare dso_local i32 @sysfs_remove_group(i32*, i32*) #1

declare dso_local i32 @kfree(%struct.gsp_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
